--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -2,18 +2,20 @@
   .about-container {
     /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
     height: 100vh;
-    width: 100%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
     object-fit: contain;
+    margin: 0 auto;
   }
   
   .about-container > h1 {
     color: rgb(0, 0, 0);
-    font-size: 100px;
+    font-size: 80px;
     margin-top: -100px;
   }
   
