--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -1,10 +1,11 @@
 .footer-container {
     background-color: #242424;
-    padding: 2rem 0 2rem 0;
+    padding: 1.5rem 0 1.5rem 0;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
+    max-height: 12vh;
   }
   
   /* Social Icons */
