--- a/frontend/src/components/HeroSection.css
+++ b/frontend/src/components/HeroSection.css
@@ -7,19 +7,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
     object-fit: contain;
   }
   
   .hero-container > h1 {
-    color: #fff;
+    color: #000;
     font-size: 100px;
     margin-top: -100px;
   }
   
   .hero-container > p {
     margin-top: 8px;
-    color: #fff;
+    color: #000;
     font-size: 32px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif;
