--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -7,23 +7,59 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
     object-fit: contain;
-    margin: 0 auto;
+    margin: auto;
   }
   
+  .about-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
+    object-fit: contain;
+    margin-top: 10;
+  }
+
   .about-container > h1 {
     color: rgb(0, 0, 0);
     font-size: 80px;
     margin-top: -100px;
   }
   
-  .about-container > p {
+  .about-box-1 {
+    width: 80%;
+    height: 50vh;
     border-radius: 50%;
-    margin-top: 8px;
+    margin-top: 40px;
     color: rgb(0, 0, 0);
     font-size: 32px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif;
+  }
+
+  .about-box-1 > h1{
+    color: rgb(99, 96, 96);
+    margin-bottom: 48px;
+    font-size: 36px;
+  }
+
+  .about-box-2 {
+    height: 50vh;
+    width: 80%;
+    border-radius: 50%;
+    margin-top: 40px;
+    margin-left: 60px;
+    color: rgb(0, 0, 0);
+    font-size: 32px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+      'Lucida Sans', Arial, sans-serif;
+  }
+
+  .about-box-2 > h1{
+    color: rgb(99, 96, 96);
+    margin-bottom: 48px;
+    font-size: 36px;
   }
