--- a/frontend/src/components/Welcome.css
+++ b/frontend/src/components/Welcome.css
@@ -1,6 +1,6 @@
   
-  .hero-container {
-    /* background: url('public/images/bookbg.jpg') center center/cover no-repeat;  node module error*/
+  .welcome-container {
+    background: url("../images/bookbg.jfif") center center/cover no-repeat;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -11,21 +11,21 @@
     object-fit: contain;
   }
   
-  .hero-container > h1 {
-    color: #000;
+  .welcome-container > h1 {
+    color: rgb(255, 255, 255);
     font-size: 100px;
     margin-top: -100px;
   }
   
-  .hero-container > p {
+  .welcome-container > p {
     margin-top: 8px;
-    color: #000;
+    color: rgb(255, 255, 255);
     font-size: 32px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif;
   }
   
-  .hero-links {
+  .welcome-links {
     color: #fff;
     display: flex;
     align-items: center;
@@ -34,7 +34,7 @@
     height: 100%;
   }
   
-  .hero-links:hover {
+  .welcome-links:hover {
     border-bottom: 4px solid #fff;
     transition: all 0.2s ease-out;
   }
