--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,6 +1,9 @@
 .navbar {
+
     background: linear-gradient(90deg, rgb(44, 42, 42) 0%, rgb(31, 28, 28) 100%);
     height: 80px;
+  }
+/*
     display: flex;
     justify-content: center;
     align-items: center;
@@ -73,4 +76,4 @@
   
   .menu-icon {
     display: none;
-  }
+  }*/
