--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -25,7 +25,7 @@
 
   .about-container > h1 {
     color: rgb(0, 0, 0);
-    font-size: 80px;
+    font-size: calc(45px + 3vmin);
     margin-top: -100px;
   }
   
@@ -35,7 +35,7 @@
     border-radius: 50%;
     margin-top: 40px;
     color: rgb(0, 0, 0);
-    font-size: 32px;
+    font-size: calc(20px + 1vmin);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif;
   }
@@ -53,7 +53,7 @@
     margin-top: 40px;
     margin-left: 60px;
     color: rgb(0, 0, 0);
-    font-size: 32px;
+    font-size: calc(20px + 1vmin);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif;
   }
