--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,6 +1,10 @@
+.signin-page {
+   height: 100vh;
+   background-color: #f5f5f5;
+}
 
 .center-content {
-
+	
 	height: 65vh;
 	display: flex;
 	align-items: center;
@@ -9,14 +13,14 @@
 }
 
 .primary-font {
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Roboto', sans-serif;
 }
 
 .secondary-font {
 	font-family: 'Roboto', sans-serif;
 }
 
-.primary-color: {
+.primary-color {
 	color: #333 !important;
 }
 
