--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -63,3 +63,22 @@
     margin-bottom: 48px;
     font-size: 36px;
   }
+
+  @media screen and (max-width: 960px) {
+    .about-container > h1 {
+      font-size: 70px;
+      margin-top: -150px;
+    }
+  }
+  
+  @media screen and (max-width: 876px) {
+    .about-container > h1 {
+      font-size: 50px;
+      margin-top: -100px;
+      margin-left: 70px;
+    }
+  
+    .about-container > p {
+      font-size: 30px;
+    }
+  }
