--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -50,3 +50,28 @@
     color: #fff;
     margin-bottom: 16px;
   }
+
+  @media screen and (max-width: 820px) {
+    .footer-links {
+      padding-top: 2rem;
+    }
+  
+    .footer-input {
+      width: 100%;
+    }
+  
+    .btn {
+      width: 100%;
+    }
+  
+    .footer-link-wrapper {
+      flex-direction: column;
+    }
+  
+    .social-media-wrap {
+      flex-direction: column;
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+  }
