--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -10,13 +10,14 @@
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
     object-fit: contain;
     margin: auto;
+    overflow: auto;
   }
   
   .about-wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     text-align: left;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
     object-fit: contain;
@@ -62,4 +63,18 @@
     color: rgb(99, 96, 96);
     margin-bottom: 48px;
     font-size: 36px;
+  }
+
+  @media screen and (max-width: 768px) {
+
+    .about-container > h1 {
+      color: rgb(0, 0, 0);
+      font-size: calc(27px + 3vmin);
+    }
+
+    .about-wrapper {
+      /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
+      overflow-x: auto;
+    }
+
   }
