--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -5,7 +5,7 @@
     /* flex-direction: column; */
     justify-content: center;
     align-items: center;
-    max-height: 12vh;
+    max-height:12vh;
   }
   
   /* Social Icons */
@@ -49,4 +49,39 @@
   .website-rights {
     color: #fff;
     margin-bottom: 16px;
+  }
+
+  @media screen and (max-width: 820px) {
+    .footer-container {
+      background-color: #242424;
+      padding: 1.5rem 0 1.5rem 0;
+      display: flex;
+      /* flex-direction: column; */
+      justify-content: center;
+      align-items: center;
+      max-height:48vh;
+    }
+
+    .footer-links {
+      padding-top: 2rem;
+    }
+  
+    .footer-input {
+      width: 100%;
+    }
+  
+    .btn {
+      width: 100%;
+    }
+  
+    .footer-link-wrapper {
+      flex-direction: column;
+    }
+  
+    .social-media-wrap {
+      flex-direction: column;
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
   }
