--- a/frontend/src/components/Welcome.css
+++ b/frontend/src/components/Welcome.css
@@ -15,6 +15,7 @@
     color: rgb(255, 255, 255);
     font-size: 9vw;
     margin-top: -100px;
+    text-align: center;
   }
   
   .welcome-container > p {
