--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -13,6 +13,12 @@
     overflow: auto;
   }
   
+  .about-container > h1 {
+    color: rgb(0, 0, 0);
+    font-size: calc(45px + 3vmin);
+    margin-top: -100px;
+  }
+
   .about-wrapper {
     display: flex;
     flex-direction: row;
@@ -22,26 +28,20 @@
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
     object-fit: contain;
     margin-top: 10;
+    font-size: calc(20px + 1vmin);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+      'Lucida Sans', Arial, sans-serif;
   }
 
-  .about-container > h1 {
-    color: rgb(0, 0, 0);
-    font-size: calc(45px + 3vmin);
-    margin-top: -100px;
-  }
-  
   .about-box-1 {
     width: 80%;
     height: 50vh;
     border-radius: 50%;
     margin-top: 40px;
     color: rgb(0, 0, 0);
-    font-size: calc(20px + 1vmin);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
   }
 
-  .about-box-1 > h1{
+  .about-box-1 > h1 {
     color: rgb(99, 96, 96);
     margin-bottom: 48px;
     font-size: 36px;
@@ -54,9 +54,6 @@
     margin-top: 40px;
     margin-left: 60px;
     color: rgb(0, 0, 0);
-    font-size: calc(20px + 1vmin);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
   }
 
   .about-box-2 > h1{
@@ -65,14 +62,21 @@
     font-size: 36px;
   }
 
-<<<<<<< HEAD
   @media screen and (max-width: 960px) {
     .about-container > h1 {
-      font-size: 70px;
-      margin-top: -150px;
+      font-size: 50px;
+      margin-top: -100px;
+      margin-left: 70px;
     }
+
+    .about-wrapper {
+      padding-left: 250px;
+      overflow-x: auto;
+      font-size: 20px;
+    }
+
   }
-  
+/*   
   @media screen and (max-width: 876px) {
     .about-container > h1 {
       font-size: 50px;
@@ -83,18 +87,4 @@
     .about-container > p {
       font-size: 30px;
     }
-=======
-  @media screen and (max-width: 768px) {
-
-    .about-container > h1 {
-      color: rgb(0, 0, 0);
-      font-size: calc(27px + 3vmin);
-    }
-
-    .about-wrapper {
-      /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
-      overflow-x: auto;
-    }
-
->>>>>>> 445d1be42d9407aaa7bbd6a2072839e5ab25305d
-  }
+  } */
