--- a/frontend/src/components/css/Welcome.css
+++ b/frontend/src/components/css/Welcome.css
@@ -5,6 +5,7 @@
     background-color: rgb(6,30, 45);
     height: 100vh;
     width: 100%;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
