--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -19,6 +19,14 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
+h1 {
+	font-size: 3.1rem;
+}
+
+h2 {
+	font-size: 2.2rem;
+}
+
 .secondary-font {
 	font-family: 'Roboto', sans-serif;
 }
