--- a/frontend/src/components/css/Footer.css
+++ b/frontend/src/components/css/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
     /* background-color: #242424; */
-    background-color: rgb(6,30, 45);
+    background-color: var(--main-color);
     padding: 1.5rem 0 1.5rem 0;
     display: flex;
     /* flex-direction: column; */
