--- a/frontend/src/components/css/Navbar.css
+++ b/frontend/src/components/css/Navbar.css
@@ -33,7 +33,6 @@
   grid-gap: 10px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 1.2rem;
   display: flex;
   align-items: left;
 }
@@ -41,11 +40,6 @@
 .navbar-logo img {
   width: calc(30px + 1vh);
   height: calc(30px + 1vh);
-}
-
-.fa-typo3 {
-  margin-left: 0.5rem;
-  font-size: 1.8rem;
 }
 
 .nav-menu {
@@ -61,6 +55,7 @@
 
 .nav-item {
   height: 80px;
+  font-size: 1em;
 }
 
 .nav-links {
@@ -72,9 +67,57 @@
   height: 100%;
 }
 
+ul {
+  list-style-type: none
+}
+
 .drop-down {
   background-color: var(--main-color) !important;
+  border: none;
+  color: white;
+  /* padding: 0; */
+  margin:0;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1em;
+  border-radius: 20px;
+  color: #fff;
+  /* display: flex; */
+  align-items: center;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  height: 100%;
 }
+
+.drop-down-options {
+  background-color: var(white) !important;
+  border: none;
+  color: black;
+  border: gray;
+  padding: 10px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+/*
+#drop-down-basic-button {
+  color:red !important;
+}
+
+#bootstrap-overrides .drop-down {
+  color: yellow !important;
+  font-size: 1.2rem !important;
+}
+
+.drop-down:hover {
+  background-color: var(--main-color) !important;
+  color: purple;
+  font-size: 1.2rem;
+}
+*/
 
 .nav-links:hover {
   /* border-bottom: 4px solid #fff; */
